src/test/deca/syntax/invalid/resultats/test32_readFloat-synt.res
./src/test/deca/syntax/invalid/test32_readFloat.deca:17:13: missing ')' at ';'
